--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
@@ -8,7 +8,7 @@
 <section>
   <h2>Style</h2>
   <ui-form-checkbox shape="square">Square</ui-form-checkbox><br>
-  <ui-form-checkbox shape="rounded">Rounded</ui-form-checkbox><br>
+  <ui-form-checkbox shape="round">Rounded</ui-form-checkbox><br>
   <ui-form-checkbox shape="circle">Circle</ui-form-checkbox>
 </section>
 
@@ -22,5 +22,7 @@
 <section>
   <h2>Color</h2>
   <ui-form-checkbox color="primary">Primary</ui-form-checkbox><br>
-  <ui-form-checkbox color="secondary">Secondary</ui-form-checkbox>
+  <ui-form-checkbox color="primary-mid-light">Primary mid light</ui-form-checkbox><br>
+  <ui-form-checkbox color="secondary">Secondary</ui-form-checkbox><br>
+  <ui-form-checkbox color="secondary-mid-light">Secondary mid light</ui-form-checkbox>
 </section>
