--- a/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.html
@@ -1,4 +1,5 @@
 <label class="shape-{{ shape }} size-{{ size }} color-{{ color }}">
   <input type="checkbox">
   <span class="slider"></span>
+  <span class="text"><ng-content></ng-content></span>
 </label>
