--- a/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.scss
@@ -49,7 +49,13 @@ $colors: (
 // The switch box
 label {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  margin: 0;
+}
+
+.text {
+  position: relative;
 }
 
 // Hide default checkbox
@@ -92,8 +98,12 @@ input {
 
   .size-#{$label} {
     & {
-      width: $w;
+      // width: $w;
       height: $h;
+    }
+
+    .slider {
+      width: $w;
     }
 
     // Inactive switch: the slider's toggle
@@ -107,6 +117,10 @@ input {
     // Active switch: the slider's toggle
     input:checked + .slider::before {
       transform: translateX($w - $gap * 2 - $toggle);
+    }
+
+    .text {
+      left: $w;
     }
 
     // Rounded variant
