Refactor <ui-alert> with animation

--- a/ngrx/code/posts-app/src/app/app.component.html
+++ b/ngrx/code/posts-app/src/app/app.component.html
@@ -6,6 +6,6 @@
   <ui-alert
     [message]="alert.message"
     [type]="alert.type"
-    (dismissed)="onDismissAlert()"
+    (dismissing)="onDismissAlert($event)"
   ></ui-alert>
 </ng-container>
