--- a/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="alert type-{{ type }}">
       <span class="message">{{ message }}</span>
-      <span class="dismiss" (click)="onDismiss()">&times;</span>
+      <span class="dismiss" (click)="onWillDismiss()">&times;</span>
     </div>
   </div>
 </div>
