--- a/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.scss
@@ -1,5 +1,13 @@
 @import 'src/app/style';
 
+:host {
+  transition: opacity 0.2s linear;
+
+  &.dismissed {
+    opacity: 0;
+  }
+}
+
 .alert-container {
   @include pal((
     position: 'fixed' (2 0 auto 0),
