Fix <ui-alert> hovering bug

--- a/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/alert/alert.component.scss
@@ -34,14 +34,18 @@
   ));
 
   &.type-success {
+    $color: pal-get('colors.secondary');
     @include pal((
-      color: 'secondary',
+      'any': (color: $color),
+      'any:hover': (color: scale_color($color, $lightness: +10%)),
     ));
   }
 
   &.type-error {
+    $color: pal-get('colors.primary');
     @include pal((
-      color: 'primary',
+      'any': (color: $color),
+      'any:hover': (color: scale_color($color, $lightness: +10%)),
     ));
   }
 }
