Fix demo for <ui-card>

--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/card/card.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/card/card.component.html
@@ -36,7 +36,7 @@
 
 <h2>Dismissable</h2>
 
-<ui-card dismissable (dismissed)="onDismiss()">
+<ui-card dismissable (dismissing)="onDismiss($event)">
   <h2 slot="title">I am a title</h2>
   <div slot="body">
     Lorem ipsum dolor sit amet...
