--- a/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.scss
@@ -23,7 +23,7 @@ $sizes: (
   'large': 1.66rem,
 );
 
-$color-inactive: pal-get('colors.grey-mid-dark');
+$color-inactive: pal-get('colors.grey');
 $color-toggle: white;
 $colors: (
   'primary': (
@@ -41,10 +41,14 @@ $colors: (
 // The switch box
 label {
   position: relative;
-  display: inline-flex;
+  display: flex;
   align-items: center;
   margin: 0;
   cursor: pointer;
+
+  &.inline {
+    display: inline-flex;
+  }
 }
 
 .text {
@@ -90,8 +94,8 @@ input {
 
   .size-#{$label} {
     & {
-      // width: $w;
       height: $h;
+      margin: ($h * 0.5) 0;
     }
 
     .slider {
