--- a/ngrx/code/posts-app/src/app/app.component.html
+++ b/ngrx/code/posts-app/src/app/app.component.html
@@ -5,7 +5,8 @@
 <ng-container *ngIf="ui.alert | async as alert">
   <ui-alert
     [message]="alert.message"
-    [type]="alert.type"
+    [type]="alert?.type"
+    [delay]="alert?.delay"
     (dismissing)="onDismissAlert($event)"
   ></ui-alert>
 </ng-container>
