Add "changed" event for standalone <ui-form-checkbox>

--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
@@ -7,7 +7,7 @@
 
 <section>
   <h2>Style</h2>
-  <ui-form-checkbox shape="square">Square</ui-form-checkbox>
+  <ui-form-checkbox shape="square" (changed)="onInputChange($event)">Square</ui-form-checkbox>
   <ui-form-checkbox shape="round">Rounded</ui-form-checkbox>
   <ui-form-checkbox shape="circle">Circle</ui-form-checkbox>
 </section>
