--- a/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/form/checkbox/checkbox.component.html
@@ -2,7 +2,13 @@
   class="shape-{{ shape }} size-{{ size }} color-{{ color }}"
   [class.inline]="inline"
 >
-  <input #inputRef type="checkbox" (change)="onInputChange($event.target.checked)">
+  <input
+    #inputRef
+    type="checkbox"
+    (change)="onInputChange($event.target.checked)"
+  >
   <span class="slider"></span>
-  <span class="text"><ng-content></ng-content></span>
+  <span class="text">
+    <ng-content></ng-content>
+  </span>
 </label>
