WIP: radio buttons

--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
@@ -28,9 +28,9 @@
 <section>
   <h2>In form</h2>
   <form [formGroup]="checkboxForm" (ngSubmit)="onSubmit()">
-    <ui-form-checkbox color="secondary" formControlName="foo">Foo</ui-form-checkbox>
-    <ui-form-checkbox shape="round" formControlName="bar">Bar</ui-form-checkbox>
-    <ui-form-checkbox size="large" formControlName="baz">Baz</ui-form-checkbox>
+    <ui-form-checkbox color="secondary" formControlName="foo">I am Foo</ui-form-checkbox>
+    <ui-form-checkbox shape="round" formControlName="bar">But also Bar</ui-form-checkbox>
+    <ui-form-checkbox size="large" formControlName="baz">And a little bit of Baz</ui-form-checkbox>
     <ui-button type="submit">Submit</ui-button>
   </form>
 </section>
