--- a/ngrx/code/posts-app/src/app/shared/ui/components/form/radio/radio.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/form/radio/radio.component.html
@@ -1,14 +1,1 @@
-<label
-  class="shape-{{ shape }} size-{{ size }} color-{{ color }}"
-  [class.inline]="inline"
->
-  <input
-    #inputRef
-    type="radio"
-    (change)="onInputChange($event.target.checked)"
-  >
-  <span class="bullet"></span>
-  <span class="text">
-    <ng-content></ng-content>
-  </span>
-</label>
+<p>radio works!</p>
