Start over <ui-form-radio>

--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/radio/radio.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/radio/radio.component.html
@@ -25,7 +25,7 @@
   <ui-form-radio color="secondary">Secondary</ui-form-radio>
 </section>
 
-<section>
+<!-- <section>
   <h2>In form</h2>
   <p>How many hours do you sleep per night on average?</p>
   <form [formGroup]="radioForm" (ngSubmit)="onSubmit()">
@@ -41,4 +41,4 @@
 
     <ui-button type="submit">Submit</ui-button>
   </form>
-</section>
+</section> -->
