--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/form/checkbox/checkbox.component.html
@@ -6,7 +6,7 @@
 ]"></ui-breadcrumbs>
 
 <section>
-  <h2>Style</h2>
+  <h2>Shape</h2>
   <ui-form-checkbox shape="square" (changed)="onInputChange($event)">Square</ui-form-checkbox>
   <ui-form-checkbox shape="round">Rounded</ui-form-checkbox>
   <ui-form-checkbox shape="circle">Circle</ui-form-checkbox>
