--- a/ngrx/code/posts-app/src/app/shared/ui/components/form/radio/radio.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/form/radio/radio.component.html
@@ -1,17 +1,16 @@
-<ng-container *ngFor="let option of options; let index = index">
-  <label
-    class="shape-{{ shape }} size-{{ size }} color-{{ color }}"
-    [class.inline]="inline"
-    [for]="name + index"
+<label
+  *ngFor="let option of options; let index = index"
+  class="shape-{{ shape }} size-{{ size }} color-{{ color }}"
+  [class.inline]="inline"
+  [for]="name + index"
+>
+  <input
+    type="radio"
+    [value]="option.value"
+    [id]="name + index"
+    [checked]="option.value === value"
+    (change)="onInputChange($event)"
   >
-    <input
-      type="radio"
-      [value]="option.value"
-      [id]="name + index"
-      [checked]="option.value === value"
-      (change)="onInputChange($event)"
-    >
-    <span class="bullet"></span>
-    <span class="text">{{ option.label }}</span>
-  </label>
-</ng-container>
+  <span class="bullet"></span>
+  <span class="text">{{ option.label }}</span>
+</label>
