Move alert service inside UI component

--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/alert/alert.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/alert/alert.component.html
@@ -8,11 +8,11 @@
 ></ui-breadcrumbs>
 
 <!-- Success -->
-<ui-button (click)="setSuccessAlert(true)" color="secondary">
+<ui-button (click)="showSuccessAlert()" color="secondary">
   Show success alert
 </ui-button>
 
 <!-- Error -->
-<ui-button (click)="setErrorAlert(true)" color="primary">
+<ui-button (click)="showErrorAlert()" color="primary">
   Show error alert
 </ui-button>
