--- a/ngrx/code/posts-app/src/app/app.component.html
+++ b/ngrx/code/posts-app/src/app/app.component.html
@@ -2,7 +2,7 @@
   <router-outlet></router-outlet>
 </div>
 
-<ng-container *ngIf="ui.alert | async as alert">
+<ng-container *ngIf="alertService.alert | async as alert">
   <ui-alert
     [message]="alert.message"
     [type]="alert?.type"
