--- a/angular/project/src/app/components/calendar/calendar.component.html
+++ b/angular/project/src/app/components/calendar/calendar.component.html
@@ -15,6 +15,7 @@
     *ngFor="let day of days"
     class="day {{ day.weekDay }}"
     [class.disabled]="day.monthDiff !== MonthDiff.Current"
+    [class.active]="day.isActive"
     (click)="onDayClick(day)"
   >
     {{ day.day }}
