--- a/ngrx/store-demo/src/app/app.component.html
+++ b/ngrx/store-demo/src/app/app.component.html
@@ -1,12 +1,20 @@
 <h1>Store demo</h1>
 <h2>Products</h2>
 
-<form [formGroup]="productForm" (ngSubmit)="onCreateProduct()">
+<form [formGroup]="productForm" (ngSubmit)="onCreateOrUpdateProduct()">
   <label for="product-name">
-    Add a product
     <input type="text" formControlName="name" id="product-name">
-    <button type="submit" [disabled]="productForm.invalid">Add</button>
   </label>
+
+  <ng-container *ngIf="!!product; else createProductRef">
+    <button type="button" (click)="onCancel()">Cancel</button>
+    <button type="submit" [disabled]="productForm.invalid">Edit</button>
+  </ng-container>
+
+  <ng-template #createProductRef>
+    <button type="submit" [disabled]="productForm.invalid">Create</button>
+  </ng-template>
+
 </form>
 
 <ul *ngIf="products$ | async as products">
@@ -14,6 +22,7 @@
     #{{ product.id }}
     <strong>{{ product.name }}</strong>
     &nbsp;
+    <button (click)="onSelectProduct(product)">Edit</button>
     <button (click)="onRemoveProduct(product.id)">Remove</button>
   </li>
 </ul>
