--- a/firebase/codelabs-kanban/src/app/app.component.html
+++ b/firebase/codelabs-kanban/src/app/app.component.html
@@ -3,85 +3,81 @@
   <span>Kanban Fire</span>
 </mat-toolbar>
 
-<!-- Create new task -->
 <div class="content-wrapper">
+
+  <!-- Create new task -->
   <button (click)="newTask()" mat-button>
     <mat-icon>add</mat-icon> Add Task
   </button>
 
-  <div class="container-wrapper">
-    <div class="container">
-      ...
-    </div>
-</div>
+  <div class="kanban-columns">
 
-<div class="container-wrapper">
-
-  <!-- Backlog -->
-  <div class="container">
-    <h2>Backlog</h2>
-    <mat-card
-      cdkDropList
-      id="todo"
-      #todoList="cdkDropList"
-      [cdkDropListData]="todo"
-      [cdkDropListConnectedTo]="[doneList, inProgressList]"
-      (cdkDropListDropped)="drop($event)"
-      class="list"
-    >
-      <p class="empty-label" *ngIf="todo.length === 0">Empty list</p>
-      <app-task
-        *ngFor="let task of todo"
-        [task]="task"
-        cdkDrag
-        (edit)="editTask('todo', $event)"
-      ></app-task>
-    </mat-card>
-  </div>
-
-  <!-- In progress -->
-  <div class="container">
-    <h2>In progress</h2>
-    <mat-card
-      cdkDropList
-      id="inProgress"
-      #inProgressList="cdkDropList"
-      [cdkDropListData]="inProgress"
-      [cdkDropListConnectedTo]="[todoList, doneList]"
-      (cdkDropListDropped)="drop($event)"
-      class="list"
-    >
-      <p class="empty-label" *ngIf="inProgress.length === 0">Empty list</p>
-      <app-task
-        (edit)="editTask('inProgress', $event)"
-        *ngFor="let task of inProgress"
-        cdkDrag
-        [task]="task"
+    <!-- Backlog -->
+    <div class="kanban-column">
+      <h2>Backlog</h2>
+      <mat-card
+        cdkDropList
+        id="todo"
+        #todoList="cdkDropList"
+        [cdkDropListData]="todo"
+        [cdkDropListConnectedTo]="[doneList, inProgressList]"
+        (cdkDropListDropped)="drop($event)"
+        class="list"
       >
-      </app-task>
-    </mat-card>
-  </div>
+        <p class="empty-label" *ngIf="todo.length === 0">Empty list</p>
+        <app-task
+          *ngFor="let task of todo"
+          [task]="task"
+          cdkDrag
+          (edit)="editTask('todo', $event)"
+        ></app-task>
+      </mat-card>
+    </div>
 
-  <!-- Done -->
-  <div class="container">
-    <h2>Done</h2>
-    <mat-card
-      cdkDropList
-      id="done"
-      #doneList="cdkDropList"
-      [cdkDropListData]="done"
-      [cdkDropListConnectedTo]="[todoList, inProgressList]"
-      (cdkDropListDropped)="drop($event)"
-      class="list"
-    >
-      <p class="empty-label" *ngIf="done.length === 0">Empty list</p>
-      <app-task
-        (edit)="editTask('done', $event)"
-        *ngFor="let task of done"
-        cdkDrag
-        [task]="task"
-      ></app-task>
-    </mat-card>
-  </div>
+    <!-- In progress -->
+    <div class="kanban-column">
+      <h2>In progress</h2>
+      <mat-card
+        cdkDropList
+        id="inProgress"
+        #inProgressList="cdkDropList"
+        [cdkDropListData]="inProgress"
+        [cdkDropListConnectedTo]="[todoList, doneList]"
+        (cdkDropListDropped)="drop($event)"
+        class="list"
+      >
+        <p class="empty-label" *ngIf="inProgress.length === 0">Empty list</p>
+        <app-task
+          (edit)="editTask('inProgress', $event)"
+          *ngFor="let task of inProgress"
+          cdkDrag
+          [task]="task"
+        >
+        </app-task>
+      </mat-card>
+    </div>
 
+    <!-- Done -->
+    <div class="kanban-column">
+      <h2>Done</h2>
+      <mat-card
+        cdkDropList
+        id="done"
+        #doneList="cdkDropList"
+        [cdkDropListData]="done"
+        [cdkDropListConnectedTo]="[todoList, inProgressList]"
+        (cdkDropListDropped)="drop($event)"
+        class="list"
+      >
+        <p class="empty-label" *ngIf="done.length === 0">Empty list</p>
+        <app-task
+          (edit)="editTask('done', $event)"
+          *ngFor="let task of done"
+          cdkDrag
+          [task]="task"
+        ></app-task>
+      </mat-card>
+    </div>
+
+  </div>
 </div>
