--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/item-edit/item-edit.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/item-edit/item-edit.component.html
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+    <form (ngSubmit)="onSubmit(itemForm)" #itemForm="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
+
           <label for="name">Name</label>
           <input
             type="text"
@@ -13,6 +14,7 @@
             required
           >
         </div>
+
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
           <input
@@ -28,16 +30,32 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
+
           <button
             class="btn btn-success"
             type="submit"
-            [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}</button>
+            [disabled]="!itemForm.valid"
+          >
+            {{ editMode ? 'Update' : 'Add' }}
+          </button>
+
           <button
             class="btn btn-danger"
             type="button"
             (click)="onDelete()"
-            *ngIf="editMode">Delete</button>
-          <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
+            *ngIf="editMode"
+          >
+            Delete
+          </button>
+
+          <button
+            class="btn btn-primary"
+            type="button"
+            (click)="onClear()"
+          >
+            Clear
+          </button>
+
         </div>
       </div>
     </form>
