--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/details/details.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/details/details.component.html
@@ -4,37 +4,50 @@
       [src]="recipe.imagePath"
       alt="{{ recipe.name }}"
       class="img-responsive"
-      style="max-height: 300px;">
+      style="max-height: 300px;"
+    >
   </div>
 </div>
+
 <div class="row">
   <div class="col-xs-12">
     <h1>{{ recipe.name }}</h1>
   </div>
 </div>
+
 <div class="row">
   <div class="col-xs-12">
-    <div
-      class="btn-group"
-      appDropdown>
-      <button
-        type="button"
-        class="btn btn-primary dropdown-toggle">
+    <div class="btn-group" appDropdown>
+      <button type="button" class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
-        <li><a style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a></li>
+        <li>
+          <a (click)="onAddToShoppingList()" class="pointer">
+            To Shopping List
+          </a>
+        </li>
+        <li>
+          <a class="pointer" (click)="onEditRecipe()">
+            Edit Recipe
+          </a>
+        </li>
+        <li>
+          <a class="pointer" (click)="onDeleteRecipe()">
+            Delete Recipe
+          </a>
+        </li>
       </ul>
     </div>
   </div>
 </div>
+
 <div class="row">
   <div class="col-xs-12">
     {{ recipe.description }}
   </div>
 </div>
+
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
