--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/list/list.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/shopping-list/components/list/list.component.html
@@ -4,8 +4,7 @@
     <hr>
     <ul class="list-group">
       <a
-        class="list-group-item"
-        style="cursor: pointer"
+        class="list-group-item pointer"
         *ngFor="let ingredient of ingredients; let i = index"
         (click)="onEditItem(i)"
       >
