--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/item/item.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/item/item.component.html
@@ -1,5 +1,5 @@
 <a
-  routerLink="/recipes/{{ index }}"
+  routerLink="/recipes/{{ recipe.name | appEncodeUri }}"
   routerLinkActive="active"
   class="list-group-item d-flex pointer"
 >
