--- a/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/list/list.component.html
+++ b/courses/angular-complete-guide/recipes-ngrx/src/app/features/recipes/components/list/list.component.html
@@ -10,10 +10,9 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <app-recipes-item
-      *ngFor="let recipe of recipes; let index = index"
+    <app-recipe-item
+      *ngFor="let recipe of recipes"
       [recipe]="recipe"
-      [index]="index"
-    ></app-recipes-item>
+    ></app-recipe-item>
   </div>
 </div>
